<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.AlertDialogLayout
    android:id="@+id/dialog_edit_title"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_margin="16dp"
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/dialog_title_hint" />
</android.support.v7.widget.AlertDialogLayout>