...
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/task_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_add_task"
                    android:src="@drawable/ic_add_task"
                    android:focusable="true"
                    android:elevation="6dp"
                    android:clickable="true"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="16dp"
...
